# semops-publisher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  publish.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
agents/: __init__.py  draft.py  formatter.py  outline.py  research.py
comfyui/: .dockerignore  .gitignore  IMAGE-SPECS.md  PROMPT-GUIDE.md  README.md  docker-compose.yml  download-models.sh  generate.py  test_loras.py  test_models.py  test_prompts.py
comfyui/inputs/: .gitkeep
comfyui/outputs/: .gitkeep
comfyui/workflows/: .gitkeep  basic-sdxl-txt2img.json  sdxl-with-lora.json
docs/: ARCHITECTURE.md  ASSET_MANAGEMENT_SCHEMA_REQUIREMENTS.md  CONTENT_MANIFEST.md  DIAGRAM_STANDARDS.md  INFRASTRUCTURE.md  RUNBOOK.md  USER_GUIDE.md
docs/decisions/: ADR-0001-claude-code-runtime.md  ADR-0002-experiment-framework.md  ADR-0003-narrative-style-system.md  ADR-0004-resumator-stack.md  ADR-0005-publishing-architecture.md  ADR-0006-knowledge-base-context-integration.md  ADR-0007-comfyui-image-generation.md  ADR-0008-model-storage-architecture.md  ADR-0009-pandoc-pdf-export.md  ADR-0010-style-guide-architecture.md  ADR-0011-resume-schema-design.md  ADR-0012-resume-composition-model.md  ADR-0013-edit-capture-intent-architecture.md  ADR-0014-content-manifest-conventions.md  ADR-0015-publishing-pipeline-architecture.md  ADR-0016-bounded-context-extraction.md  (+2 more)
scripts/: __init__.py  capture_edits.py  corpus_to_sql.py  export_pdf.py  log_edit.py
tests/: test_generate_mdx.py
